--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <meta  Name="description" Content="Персональный сайт Андрея Макарова, иллюстративная графика для настольных ролевых игр, контакты, дополнительная информация" >
 
     <title>Main page</title>
-    <link rel="stylesheet" href="css/top-menu.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
   
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
@@ -34,6 +33,7 @@
         <li><a href="/gallery" title="Образцы работ">ГАЛЕРЕЯ</a></li>
         <li><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
         <li><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
+</ul>
 </nav>	
 
 <img class="logo" src="img/logo.svg" title=>
@@ -45,9 +45,9 @@
 
 <div id="social">
 	<li class="social"><a href="http://instagram.com/anmcarrow" title="Фотохроника" target="_blank"></a></li>
-	<li class="social"><a href="http://instagram.com/anmcarrow" title="Коллекция картинок" target="_blank"></a></li>
-	<li class="social"><a href="http://instagram.com/anmcarrow" title="Новостные ленты" target="_blank"></a></li>
-	<li class="social"><a href="http://instagram.com/anmcarrow" title="Hangouts, например" target="_blank"></a></li>
+	<li class="social"><a href="http://anmcarrow.tumblr.com" title="Коллекция картинок" target="_blank"></a></li>
+	<li class="social"><a href="http://twitter.com/anmcarrow" title="Новостные ленты" target="_blank"></a></li>
+	<li class="social"><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank"></a></li>
 	<li class="social"><a href="http://instagram.com/anmcarrow" title="Пишите письма!" target="_blank"></a></li>
     </ul>
 </div>
