--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
         
 <nav>
     <ul class="top-menu">
-        <li class="active">ГЛАВНАЯ</li>
         <li><a href="/aboutme" title="Немного обо мне">ПОДРОБНОСТИ</a></li>
-        <li><a href="/gallery" title="Образцы работ">ГАЛЕРЕЯ</a></li>
+        <li><a href="http://anmcarrow.deviantart.ru" title="Образцы работ">ГАЛЕРЕЯ</a></li>
         <li><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
         <li><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
 </ul>
 </nav>	
 
-<img class="logo" src="img/logo.svg" title=>
-
 <section>
-<h2>ЛИЧНАЯ СТРАНИЦА</h2> 
-<h3>АНДРЕЯ МАКАРОВА</h3>
+<div id="logo"></div>
+
+<h1>ЛИЧНАЯ СТРАНИЦА</h1> 
+<h2>АНДРЕЯ М.</h2>
 </section>
 
-<div id="social">
-	<li class="social"><a href="http://instagram.com/anmcarrow" title="Фотохроника" target="_blank"></a></li>
-	<li class="social"><a href="http://anmcarrow.tumblr.com" title="Коллекция картинок" target="_blank"></a></li>
-	<li class="social"><a href="http://twitter.com/anmcarrow" title="Новостные ленты" target="_blank"></a></li>
-	<li class="social"><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank"></a></li>
-	<li class="social"><a href="http://instagram.com/anmcarrow" title="Пишите письма!" target="_blank"></a></li>
+<div class="social">
+<ul>
+	<li><a href="http://instagram.com/anmcarrow" title="Фотохроника" target="_blank"></a></li>
+	<li><a href="http://anmcarrow.tumblr.com" title="Коллекция картинок" target="_blank"></a></li>
+	<li><a href="http://twitter.com/anmcarrow" title="Новостные ленты" target="_blank"></a></li>
+	<li><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank"></a></li>
+	<li><a href="http://instagram.com/anmcarrow" title="Пишите письма!" target="_blank"></a></li>
     </ul>
 </div>
 
@@ -58,9 +58,7 @@
 <a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!">
 ©AM_
 </a>
-
 </div>
-
 </div> 
 </footer>
 
