--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
 <nav>
     <ul class="top-menu">
-        <li><a href="/aboutme" title="Немного обо мне">ПОДРОБНОСТИ</a></li>
+        <li><a href="/aboutme" title="Немного обо мне">В ЦЕЛОМ</a></li>
         <li><a href="http://anmcarrow.deviantart.ru" title="Образцы работ">ГАЛЕРЕЯ</a></li>
         <li><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
         <li><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
@@ -51,12 +51,13 @@
 	<li><a href="http://instagram.com/anmcarrow" title="Пишите письма!" target="_blank"></a></li>
     </ul>
 </div>
+</div>
 
 <footer>
 <div id="footer"> 
 <div id="footer-copyrights">
 <a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!">
-©AM_
+©am_2016, all rights reserved
 </a>
 </div>
 </div> 
