--- a/index.html
+++ b/index.html
@@ -44,11 +44,21 @@
 
 <div class="social">
 <ul>
-	<li><a href="http://instagram.com/anmcarrow" title="Фотохроника" target="_blank"></a></li>
-	<li><a href="http://anmcarrow.tumblr.com" title="Коллекция картинок" target="_blank"></a></li>
-	<li><a href="http://twitter.com/anmcarrow" title="Новостные ленты" target="_blank"></a></li>
-	<li><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank"></a></li>
-	<li><a href="http://instagram.com/anmcarrow" title="Пишите письма!" target="_blank"></a></li>
+	<li><a href="http://instagram.com/anmcarrow" title="Фотохроника" target="_blank">
+	<i class="fa-instagram fa-fw"></i>
+	</a></li>
+	<li><a href="http://anmcarrow.tumblr.com" title="Коллекция картинок" target="_blank">
+	<i class="fa-tumblr fa-fw"></i>
+	</a></li>
+	<li><a href="http://twitter.com/anmcarrow" title="Новостные ленты" target="_blank">
+	<i class="fa-twitter fa-fw"></i>
+	</a></li>
+	<li><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank">
+	<i class="fa-google-plus fa-fw"></i>
+	</a></li>
+	<li><a href="http://instagram.com/anmcarrow" title="Пишите письма!" target="_blank">
+	<i class="fa-envelope-o fa-fw"></i>
+	</a></li>
     </ul>
 </div>
 </div>
