--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <body>
     <div id="wrapper">
         
+<!-- 
 <nav>
     <ul class="top-menu">
         <li><a href="/aboutme" title="Немного обо мне">В ЦЕЛОМ</a></li>
@@ -33,7 +34,8 @@
         <li><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
         <li><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
 </ul>
-</nav>	
+</nav>
+-->	
 
 <section>
 <div id="logo"></div>
@@ -53,6 +55,11 @@
 	<li><a href="http://twitter.com/anmcarrow" title="Новостные ленты" target="_blank">
 	<i class="fa-twitter fa-fw"></i>
 	</a></li>
+
+	<li><a href="http://anmcarrow.deviantart.com" title="Галерея работ" target="_blank">
+	<i class="fa-deviantart fa-fw"></i>
+	</a></li>	
+
 	<li><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank">
 	<i class="fa-google-plus fa-fw"></i>
 	</a></li>
@@ -60,7 +67,6 @@
 	<i class="fa-envelope-o fa-fw"></i>
 	</a></li>
     </ul>
-</div>
 </div>
 
 <footer>
@@ -72,6 +78,6 @@
 </div>
 </div> 
 </footer>
-
+</div>
 </body>
 </html>
