--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <title>Main page</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/noise.css" type="text/css">    
   
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -24,7 +25,7 @@
 </head>
 
 <body>
-    <div id="wrapper">
+    <wrapper>
         
 <!-- 
 <nav>
@@ -38,11 +39,10 @@
 -->	
 
 <section>
-<div id="logo"></div>
+<logo></logo>
 
 <h1>ЛИЧНАЯ СТРАНИЦА</h1> 
 <h2>АНДРЕЯ М.</h2>
-</section>
 
 <div class="social">
 <ul>
@@ -68,16 +68,19 @@
 	</a></li>
     </ul>
 </div>
+</section>
 
+<!--
 <footer>
 <div id="footer"> 
 <div id="footer-copyrights">
 <a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!">
 ©am_2016, all rights reserved
 </a>
-</div>
 </div> 
 </footer>
+-->
 </div>
+
 </body>
 </html>
