--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
     <title>Main page</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <link rel="stylesheet" href="css/noise.css" type="text/css">    
   
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -52,7 +51,7 @@
 	<li><a href="http://anmcarrow.tumblr.com" title="Коллекция картинок" target="_blank">
 	<i class="fa-tumblr fa-fw"></i>
 	</a></li>
-	<li><a href="http://twitter.com/anmcarrow" title="Новостные ленты" target="_blank">
+	<li><a href="http://twitter.com/anmcarrow" title="Новостни и общение" target="_blank">
 	<i class="fa-twitter fa-fw"></i>
 	</a></li>
 
@@ -63,7 +62,7 @@
 	<li><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank">
 	<i class="fa-google-plus fa-fw"></i>
 	</a></li>
-	<li><a href="http://instagram.com/anmcarrow" title="Пишите письма!" target="_blank">
+	<li><a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!" target="_blank">
 	<i class="fa-envelope-o fa-fw"></i>
 	</a></li>
     </ul>
