--- a/wishlist.html
+++ b/wishlist.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-<wrapper>
-<h2>Просто вишлист.</h2>
+<div class="wrapper">
+<h2>Просто вишлист</h2>
 
 <p>Т.е. - лист тех «маленьких хренек» которые мне надо, но не необходимо. Тех самых штук, что обычно отступают под напором более актуальных финансовых затрат <em>(как-то: коммунальные платежи, обихаживание любимой женщины, организация мероприятий, etc.)</em>.</p>
 
@@ -408,7 +408,7 @@
 
 <p><img src="http://upload.wikimedia.org/wikipedia/commons/3/30/Don_Wayne_Reno_playing_the_banjo_with_fingerpicks.jpg" alt="sample banjo" title="" />
 Cерьёзно, мэн. Банджо это супер.</p>
-</wrapper>
+</div>
 
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
