--- a/index.html
+++ b/index.html
@@ -14,28 +14,27 @@
 
     <title>Main page</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
+        <link rel="stylesheet" href="css/menu.css" type="text/css">
   
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    
+
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
 
 <body>
-    <wrapper>
-        
-<!-- 
+<div class="wrapper">
+
 <nav>
     <ul class="top-menu">
-        <li><a href="/aboutme" title="Немного обо мне">В ЦЕЛОМ</a></li>
+        <li><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
         <li><a href="http://anmcarrow.deviantart.ru" title="Образцы работ">ГАЛЕРЕЯ</a></li>
         <li><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
         <li><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
 </ul>
 </nav>
--->	
 
 <section>
 <logo></logo>
@@ -69,7 +68,6 @@
 </div>
 </section>
 
-<!--
 <footer>
 <div id="footer"> 
 <div id="footer-copyrights">
@@ -78,7 +76,7 @@
 </a>
 </div> 
 </footer>
--->
+
 </div>
 
 <!-- Yandex.Metrika counter -->
