--- a/wishlist.html
+++ b/wishlist.html
@@ -9,6 +9,7 @@
 <meta Name="author" Content="Andrey Makarov, mailbox@pnprpg.ru">
 
     <link rel="stylesheet" href="css/backpages.css" type="text/css">
+        <link rel="stylesheet" href="css/menu.css" type="text/css">
 
 <link href='https://fonts.googleapis.com/css?family=PT+Sans:700,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
@@ -18,6 +19,17 @@
 </head>
 
 <body>
+
+<nav>
+    <ul class="top-menu">
+        <li><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
+        <li><a href="http://anmcarrow.deviantart.ru" title="Образцы работ">ГАЛЕРЕЯ</a></li>
+        <li><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
+        <li><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
+</ul>
+</nav>
+
+
 <div class="wrapper">
 <h2>Просто вишлист</h2>
 
