--- a/wishlist.html
+++ b/wishlist.html
@@ -22,10 +22,11 @@
 
 <nav>
     <ul class="top-menu">
-        <li><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
+        <li class="inactive"><a href="/aboutme" title="Немного обо мне">ГЛАВНАЯ</a></li>
+        <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
         <li><a href="http://anmcarrow.deviantart.ru" title="Образцы работ">ГАЛЕРЕЯ</a></li>
-        <li><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
-        <li><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
+        <li class="active"><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
+        <li class="inactive"><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
 </ul>
 </nav>
 
