--- a/wishlist.html
+++ b/wishlist.html
@@ -32,9 +32,7 @@
 
 
 <div class="wrapper">
-<h2>Просто вишлист</h2>
-
-<p>Т.е. - лист тех «маленьких хренек» которые мне надо, но не необходимо. Тех самых штук, что обычно отступают под напором более актуальных финансовых затрат <em>(как-то: коммунальные платежи, обихаживание любимой женщины, организация мероприятий, etc.)</em>.</p>
+<p>Список тех «мелочей» которые мне надо, но не необходимо. Тех самых штук, что обычно отступают под напором более актуальных финансовых затрат <em>(как-то: коммунальные платежи, обихаживание любимой женщины, организация мероприятий, etc.)</em>.</p>
 
 <p>Их можно дарить по поводу и без. Они, в любом случае, будут хорошим подарком.</p>
 
