--- a/wishlist.html
+++ b/wishlist.html
@@ -32,9 +32,9 @@
 
 
 <div class="wrapper">
-<p>Список тех «мелочей» которые мне надо, но не необходимо. Тех самых штук, что обычно отступают под напором более актуальных финансовых затрат <em>(как-то: коммунальные платежи, обихаживание любимой женщины, организация мероприятий, etc.)</em>.</p>
+<p>Список тех «мелочей» которые мне ужны, но не необходимы. Тех самых штук, что обычно отступают под напором более актуальных финансовых затрат <em>(как-то: коммунальные платежи, культурная деятельность, организация мероприятий, etc.)</em>.</p>
 
-<p>Их можно дарить по поводу и без. Они, в любом случае, будут хорошим подарком.</p>
+<p>Их можно дарить по поводу и без. Они, <em>в любом случае</em>, будут хорошим подарком.</p>
 
 <h1>Декор</h1>
 
