--- a/wishlist.html
+++ b/wishlist.html
@@ -22,7 +22,7 @@
 
 <nav>
     <ul class="top-menu">
-        <li class="inactive"><a href="/aboutme" title="Немного обо мне">ГЛАВНАЯ</a></li>
+        <li class="inactive"><a href="/" title="В начало">ГЛАВНАЯ</a></li>
         <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
         <li><a href="http://anmcarrow.deviantart.ru" title="Образцы работ">ГАЛЕРЕЯ</a></li>
         <li class="active"><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
