--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 <nav>
     <ul class="top-menu">
-        <li class="inactive"><a href="/aboutme" title="Немного обо мне">ГЛАВНАЯ</a></li>
+        <li class="active"><a href="/" title="В начало">ГЛАВНАЯ</a></li>
         <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
         <li><a href="http://anmcarrow.deviantart.ru" title="Образцы работ">ГАЛЕРЕЯ</a></li>
-        <li class="active"><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
+        <li class="inactive"><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
         <li class="inactive"><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
 </ul>
 </nav>
