--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <ul class="top-menu">
         <li class="active"><a href="/" title="В начало">ГЛАВНАЯ</a></li>
         <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
-        <li><a href="http://anmcarrow.deviantart.ru" title="Образцы работ">ГАЛЕРЕЯ</a></li>
+        <li><a href="http://anmcarrow.deviantart.com" title="Образцы работ">ГАЛЕРЕЯ</a></li>
         <li class="inactive"><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
         <li class="inactive"><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
 </ul>
@@ -71,7 +71,7 @@
 
 <footer>
 <div id="footer"> 
-<div id="footer-copyrights">
+<div class="footer-copyrights">
 <a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!">
 ©am_2016, all rights reserved
 </a>
