--- a/wishlist.html
+++ b/wishlist.html
@@ -24,7 +24,7 @@
     <ul class="top-menu">
         <li class="inactive"><a href="/" title="В начало">ГЛАВНАЯ</a></li>
         <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
-        <li><a href="http://anmcarrow.deviantart.ru" title="Образцы работ">ГАЛЕРЕЯ</a></li>
+        <li><a href="http://anmcarrow.deviantart.com" title="Образцы работ">ГАЛЕРЕЯ</a></li>
         <li class="active"><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
         <li class="inactive"><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
 </ul>
