--- a/aboutme.html
+++ b/aboutme.html
@@ -16,6 +16,12 @@
 <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+<!-- Markdown parser -->
+<script type="text/javascript" 
+src="http://simonwaldherr.github.io/micromarkdown.js/micromarkdown.js">
+</script>
+
 </head>
 
 <body>
@@ -35,10 +41,21 @@
 
 <div class="img-avatar"></div>
 
-<p>Список тех «мелочей» которые мне ужны, но не необходимы. Тех самых штук, что обычно отступают под напором более актуальных финансовых затрат <em>(как-то: коммунальные платежи, культурная деятельность, организация мероприятий, etc.)</em>.</p>
+<p>Список тех «мелочей» которые мне нужны, но не необходимы. Тех самых штук, что обычно отступают под напором более актуальных финансовых затрат <em>(как-то: коммунальные платежи, культурная деятельность, организация мероприятий, etc.)</em>.</p>
 
+<xmp theme="Journal" style="display:none;">
+
+### Список тех «мелочей» которые мне нужны:
+... *но не необходимы*. Тех самых штук, что обычно отступают под напором более актуальных финансовых затрат **(как-то: коммунальные платежи, культурная деятельность, организация мероприятий, etc.)**
+
+</xmp>
 
 </div>
+
+</body>
+
+<!-- MD parser scrypt -->
+<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
 
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
@@ -68,5 +85,6 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/33516783" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-</body>
+
+
 </html>
