--- a/index.html
+++ b/index.html
@@ -38,31 +38,31 @@
 </nav>
 
 <section>
-<logo></logo>
+<logo class="slowanimation"></logo>
 
 <h1>ЛИЧНАЯ СТРАНИЦА</h1> 
-<h2>АНДРЕЯ М.</h2>
+<a href="/aboutme"><h2>АНДРЕЯ М.</h2></a>
 
 <div class="social">
 <ul>
-	<li><a href="http://instagram.com/anmcarrow" title="Фотохроника" target="_blank">
+	<li class="animation"><a href="http://instagram.com/anmcarrow" title="Фотохроника" target="_blank">
 	<i class="fa-instagram fa-fw"></i>
 	</a></li>
-	<li><a href="http://anmcarrow.tumblr.com" title="Коллекция картинок" target="_blank">
+	<li class="animation"><a href="http://anmcarrow.tumblr.com" title="Коллекция картинок" target="_blank">
 	<i class="fa-tumblr fa-fw"></i>
 	</a></li>
-	<li><a href="http://twitter.com/anmcarrow" title="Новостни и общение" target="_blank">
+	<li class="animation"><a href="http://twitter.com/anmcarrow" title="Новостни и общение" target="_blank">
 	<i class="fa-twitter fa-fw"></i>
 	</a></li>
 
-	<li><a href="http://anmcarrow.deviantart.com" title="Галерея работ" target="_blank">
+	<li class="animation"><a href="http://anmcarrow.deviantart.com" title="Галерея работ" target="_blank">
 	<i class="fa-deviantart fa-fw"></i>
 	</a></li>	
 
-	<li><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank">
+	<li class="animation"><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank">
 	<i class="fa-google-plus fa-fw"></i>
 	</a></li>
-	<li><a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!" target="_blank">
+	<li class="animation"><a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!" target="_blank">
 	<i class="fa-envelope-o fa-fw"></i>
 	</a></li>
     </ul>
