--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
 <section>
 <logo class="slowanimation"></logo>
 
+<div class="linkabout">
+<a title="К детальному описанию" href="/aboutme">
 <h1>ЛИЧНАЯ СТРАНИЦА</h1> 
-<a href="/aboutme"><h2>АНДРЕЯ М.</h2></a>
+<h2>АНДРЕЯ М.</h2></a>
+</div>
 
 <div class="social">
 <ul>
