--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <ul class="top-menu">
         <li class="active"><a href="/" title="В начало">ГЛАВНАЯ</a></li>
         <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
-        <li><a href="http://anmcarrow.deviantart.com" title="Образцы работ">ГАЛЕРЕЯ</a></li>
+        <li><a href="http://anmcarrow.deviantart.com" title="Образцы работ" target="_blank">ГАЛЕРЕЯ</a></li>
         <li class="inactive"><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
-        <li class="inactive"><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
+        <li class="inactive"><a href="/links" title="Сайд-проекты">ССЫЛКИ</a></li>
 </ul>
 </nav>
 
@@ -41,7 +41,7 @@
 <logo class="slowanimation"></logo>
 
 <div class="linkabout">
-<a title="К детальному описанию" href="/aboutme">
+<a title="Немного обо мне" href="/aboutme">
 <h1>ЛИЧНАЯ СТРАНИЦА</h1> 
 <h2>АНДРЕЯ М.</h2></a>
 </div>
@@ -58,7 +58,7 @@
 	<i class="fa-twitter fa-fw"></i>
 	</a></li>
 
-	<li class="animation"><a href="http://anmcarrow.deviantart.com" title="Галерея работ" target="_blank">
+	<li class="animation"><a href="http://anmcarrow.deviantart.com" title="Образцы работ" target="_blank">
 	<i class="fa-deviantart fa-fw"></i>
 	</a></li>	
 
@@ -75,9 +75,11 @@
 <footer>
 <div id="footer"> 
 <div class="footer-copyrights">
+<div class="linkabout">
 <a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!">
 ©am_2016, all rights reserved
 </a>
+</div>
 </div> 
 </footer>
 
