--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+
+<title>Главная</title>
+
 <meta HTTP-EQUIV="Expires" Content="Tue, 15 Feb 2016 12:40:56 GMT">
 
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -12,7 +15,6 @@
 <meta  Name="keywords" Content="графический дизайн карты иллюстрации настольные ролевые игры нри художник иллюстратор" >
 <meta  Name="description" Content="Персональный сайт Андрея Макарова, иллюстративная графика для настольных ролевых игр, контакты, дополнительная информация" >
 
-    <title>Main page</title>
     <link rel="stylesheet" href="css/main.css" type="text/css">
         <link rel="stylesheet" href="css/menu.css" type="text/css">
   
@@ -41,9 +43,9 @@
 <logo class="slowanimation"></logo>
 
 <div class="linkabout">
-<a title="Немного обо мне" href="/aboutme">
-<h1>ЛИЧНАЯ СТРАНИЦА</h1> 
-<h2>АНДРЕЯ М.</h2></a>
+<a title="Специализации, квалификации и общее описание" href="/aboutme">
+<h2>ЛИЧНАЯ СТРАНИЦА</h2>
+<h1>АНДРЕЯ М.</h1></a>
 </div>
 
 <div class="social">
