--- a/aboutme.html
+++ b/aboutme.html
@@ -60,7 +60,7 @@
 <li>Нарисовать иллюстрации/карты для вашей книги...</li>
 <li>Организовать и провести НРИ-мероприятие...</li>
 <li>Записать подкаст или интервью...</li>
-<li>Просто проконсультироваться...</li>
+<li>Проконсультироваться по всему вышеперечисленному...</li>
 </ul>
 </p>
 
