--- a/aboutme.html
+++ b/aboutme.html
@@ -43,8 +43,6 @@
 <strong>Имя:</strong> Андрей Макаров <br>
 <strong>Место:</strong> Россия, г. Екатеринбург
 </div>
-
-<p>
 <h2>Интересы</h2>
 <ul class="interests">
 <li>Unix/Linux, телекоммуникации и ИТ</li>
@@ -62,11 +60,15 @@
 <li>Записать подкаст или интервью...</li>
 <li>Проконсультироваться по всему вышеперечисленному...</li>
 </ul>
-</p>
 
-<p class="emailme">
+
+<div class="emailme">
+<p>
 <a href="mailo:mailbox@anmcarrow.me" target="_blank" title="Прямо на e-mail">Напишите мне!</a>
 </p>
+</div>
+
+</div>
 </body>
 
 </html>
