--- a/wishlist.html
+++ b/wishlist.html
@@ -8,18 +8,30 @@
 
 <meta Name="author" Content="Andrey Makarov, mailbox@pnprpg.ru">
 
-    <link rel="stylesheet" href="/style.css" type="text/css">
+    <link rel="stylesheet" href="css/backpages.css" type="text/css">
+        <link rel="stylesheet" href="css/menu.css" type="text/css">
 
 <link href='https://fonts.googleapis.com/css?family=PT+Sans:700,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Neucha&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-    <!--[if lt IE 9]>
+<!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
 
 <body>
-<div id="wrapper">
+
+<nav>
+    <ul class="top-menu">
+        <li class="inactive"><a href="/" title="В начало">ГЛАВНАЯ</a></li>
+        <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
+        <li><a href="http://anmcarrow.deviantart.com" title="Образцы работ">ГАЛЕРЕЯ</a></li>
+        <li class="active"><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
+        <li class="inactive"><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
+</ul>
+</nav>
+
+
+<div class="wrapper">
 <h2>Просто вишлист.</h2>
 
 <p>Т.е. - лист тех «маленьких хренек» которые мне надо, но не необходимо. Тех самых штук, что обычно отступают под напором более актуальных финансовых затрат <em>(как-то: коммунальные платежи, обихаживание любимой женщины, организация мероприятий, etc.)</em>.</p>
@@ -400,6 +412,7 @@
 <p><img src="http://upload.wikimedia.org/wikipedia/commons/3/30/Don_Wayne_Reno_playing_the_banjo_with_fingerpicks.jpg" alt="sample banjo" title="" />
 Cерьёзно, мэн. Банджо это супер.</p>
 </div>
+
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (d, w, c) {
@@ -430,3 +443,4 @@ Cерьёзно, мэн. Банджо это супер.</p>
 <!-- /Yandex.Metrika counter -->
 </body>
 </html>
+
