--- a/wishlist.html
+++ b/wishlist.html
@@ -32,6 +32,12 @@
 
 
 <div class="wrapper">
+<div class="img-wish"></div>
+<div class=info>
+Это список вещей которые мне имеет смысл дарить. <br>
+Их можно дарить по поводу и без. <br>
+Они в любом случае будут хорошим подарком.</p>
+</div>
 <h2>Просто вишлист.</h2>
 
 <p>Т.е. - лист тех «маленьких хренек» которые мне надо, но не необходимо. Тех самых штук, что обычно отступают под напором более актуальных финансовых затрат <em>(как-то: коммунальные платежи, обихаживание любимой женщины, организация мероприятий, etc.)</em>.</p>
