--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@
 </ul>
 </nav>
 
-<section>
 <logo class="slowanimation"></logo>
 
-<div class="linkabout">
-<a title="Специализации, квалификации и общее описание" href="/aboutme">
-<h2>ЛИЧНАЯ СТРАНИЦА</h2>
-<h1>АНДРЕЯ М.</h1></a>
-</div>
+
+
+<h2>
+<a class="linkabout" title="Специализации, квалификации и общее описание" href="/aboutme">
+ЛИЧНАЯ СТРАНИЦА </br>
+<i>АНДРЕЯ М.<i>
+</a>
+</h2>
+</a>
 
 <div class="social">
 <ul>
@@ -72,14 +75,12 @@
 	</a></li>
     </ul>
 </div>
-</section>
 
 <footer>
 <div id="footer"> 
 <div class="footer-copyrights">
-<div class="linkabout">
-<a href="mailto:mailbox@anmcarrow.me" title="Пишите письма!">
-©am_2016, all rights reserved
+<a class="linkabout" href="mailto:mailbox@anmcarrow.me" title="Пишите письма!">
+© am_2016, all rights reserved
 </a>
 </div>
 </div> 
