--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 <h2>
-<a class="linkabout" title="Специализации, квалификации и общее описание" href="/aboutme">
+<a class="linkabout" title="Больше подробностей — по ссылке" href="/aboutme">
 ЛИЧНАЯ СТРАНИЦА </br>
 <i>АНДРЕЯ М.<i>
 </a>
