--- a/links.html
+++ b/links.html
@@ -53,7 +53,9 @@
 <a href="http://deadurals.pnprpg.ru" target="_blank" title="Настольная ролевая игра (в разработке)">Игра «Пробуждение: Мёртвый Урал» (в разработке)</a>
 </li>
 <li>
-<a title="Магазинчик" target="_blank" href="http://studio101.ru/otherpublishers/PNPRPG">Коммерческие продукты на Studio 101.ru</a>
+<a title="Переводы" target="_blank" href="https://bitbucket.org/anmcarrow/pnprpg_translates/">Репозиторий НРИ-переводов на Bitbucket</a>
+<li>
+<a title="Магазинчик" target="_blank" href="http://studio101.ru/otherpublishers/PNPRPG">Коммерческая мелочёвка на Studio 101.ru</a>
 </li>
 </ul>
 
