wishlist update: Plantronics BackBeat 3

--- a/wishlist.html
+++ b/wishlist.html
@@ -99,6 +99,11 @@
 
 <h1>Гаджеты и прочая техника</h1>
 
+<h2>Plantronics BackBeat 216 for iPhone<h2>
+<img src="https://mdata.yandex.net/i?path=b0214144021_img_id6874603701126518003.jpg">
+
+<p>Чёрного цвета. Доступны <a href="://market.yandex.ru/product/7857921?hid=90555&show-uid=58538159005579819837001">на Ynadex.Market</a></p>
+
 <h2>UAGear Composite Case for 13-Inch Macbook (Ash)</h2>
 
 <p><img src="http://ecx.images-amazon.com/images/I/81FPe4L-h%2BL._SL1500_.jpg" alt="" title="" /></p>
