--- a/wishlist.html
+++ b/wishlist.html
@@ -102,7 +102,7 @@
 <h2>Plantronics BackBeat 216 for iPhone</h2>
 <img src="https://mdata.yandex.net/i?path=b0214144021_img_id6874603701126518003.jpg">
 
-<p>Чёрного цвета. Доступны <a href="://market.yandex.ru/product/7857921?hid=90555&show-uid=58538159005579819837001">на Ynadex.Market</a></p>
+<p>Чёрного цвета. Доступны <a href="://market.yandex.ru/product/7857921?hid=90555&show-uid=58538159005579819837001">на Yandex.Market</a></p>
 
 <h2>UAGear Composite Case for 13-Inch Macbook (Ash)</h2>
 
