meta-favicon tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
 <meta Name="author" Content="Andrey Makarov, mailbox@anmcarrow.me">
-<meta Name="copyright" Content="Creative Commons">
+
+<link rel="shortcut icon" href="http://anmcarrow.me/favicon.ico" type="image/x-icon" />
 
 <meta  Name="keywords" Content="графический дизайн карты иллюстрации настольные ролевые игры нри художник иллюстратор" >
 <meta  Name="description" Content="Персональный сайт Андрея Макарова, иллюстративная графика для настольных ролевых игр, контакты, дополнительная информация" >
