--- a/links.html
+++ b/links.html
@@ -11,7 +11,9 @@
 
   <meta Name="author" Content="Andrey Makarov, mailbox@pnprpg.ru">
 
-  <link rel="stylesheet" href="css/backpages.css" type="text/css">
+<link rel="shortcut icon" href="http://anmcarrow.me/favicon.ico" type="image/x-icon" />
+
+<link rel="stylesheet" href="css/backpages.css" type="text/css">
 
   <link rel="stylesheet" href="css/menu.css" type="text/css">
 
