--- a/aboutme.html
+++ b/aboutme.html
@@ -11,6 +11,8 @@
 
   <meta Name="author" Content="Andrey Makarov, mailbox@pnprpg.ru">
 
+
+<link rel="shortcut icon" href="http://anmcarrow.me/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="css/backpages.css" type="text/css">
 
   <link rel="stylesheet" href="css/menu.css" type="text/css">
