--- a/aboutme.html
+++ b/aboutme.html
@@ -66,7 +66,7 @@
 
 <div class="emailme">
 <p>
-<a href="mailo:mailbox@anmcarrow.me" target="_blank" title="Прямо на e-mail">Напишите мне!</a>
+<a href="mailto:mailbox@anmcarrow.me" target="_blank" title="Прямо на e-mail">Напишите мне!</a>
 </p>
 </div>
 
