--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<i class="fa-google-plus fa-fw"></i>
 	</a></li>
 
-<li class="animation"><a href="https://bitbucket.com/anmcarrow/" title="Некотрое количество кода" target="_blank">
+<li class="animation"><a href="https://bitbucket.com/anmcarrow/" title="Немного кода и не только" target="_blank">
 	<i class="fa fa-bitbucket"></i>
 	</a></li>
 
