--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 
 <footer>
 <div id="footer"> 
-<div class="footer-copyrights">
-<a class="linkabout" href="mailto:mailbox@anmcarrow.me" title="Пишите письма!">
-© am_2016, all rights reserved
-</a>
-</div>
-</div> 
+<!-- <div class="footer-copyrights"> -->
+<!-- <a class="linkabout" href="mailto:mailbox@anmcarrow.me" title="Пишите письма!"> -->
+<!-- © am_2016, all rights reserved -->
+<!--   </a> -->
+<!-- </div> -->
+<!-- </div> -->
 </footer>
 
 </div>
