--- a/wishlist.html
+++ b/wishlist.html
@@ -262,14 +262,14 @@
 <p><img src="http://1.bp.blogspot.com/-kH68H-lNw8w/VjcsYsW1u6I/AAAAAAAAKwU/fyMbkL4lhCs/s400/APPromo2.jpg" alt="" title="" />
 <a href="http://www.lotfp.com/store/index.php?route=product/product&amp;path=41&amp;product_id=201">Купить тут</a></p>
 
-<h2>Футболку «Hallucinator», мужскую, размер «S» от LoTFP</h2>
+<h2>Футболку «Hallucinator», мужскую, размер «S»</h2>
 
-<p><img src="http://cdn.shopify.com/s/files/1/0180/3191/products/DSC_0549.png?v=1432266107" alt="" title="" />
+<p><img src="http://cdn.shopify.com/s/files/1/0180/3191/products/image_a31701fd-da9d-4622-9681-301e9e9bcbe5.jpeg" alt="" title="" />
 <a href="http://shopcriticalhit.com/collections/apparel/products/hallucinator-shirt">Купить тут</a></p>
 
-<h2>Футболку «Cthulhoids», мужскую, размер «S» от LoTFP</h2>
+<h2>Футболку «Cthulhoids», мужскую, размер «S»</h2>
 
-<p><img src="http://cdn.shopify.com/s/files/1/0180/3191/products/FullSizeRender_7.jpg?v=1444937861" alt="" title="" />
+<p><img src="http://cdn.shopify.com/s/files/1/0180/3191/products/image_b266e226-1545-4901-8985-ea724bf19ff2.jpeg" al1444937861t="" title="" />
 <a href="http://shopcriticalhit.com/collections/apparel/products/cthuloids-shirt">Купить тут</a></p>
 
 <h2>Футболку «Dungeon crawlers», мужскую, размер «S»</h2>
