--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
 	<i class="fa-google-plus fa-fw"></i>
 	</a></li>
 
+<li class="animation"><a href="https://ru.linkedin.com/in/andrey-makarov-3b7646120" title="Профиль на LinkedIn" target="_blank">
+	<i class="fa fa-linkedin"></i>
+	</a></li>
+
 <li class="animation"><a href="https://bitbucket.com/anmcarrow/" title="Немного кода и не только" target="_blank">
 	<i class="fa fa-bitbucket"></i>
 	</a></li>
