--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	</a></li>
 
 <li class="animation"><a href="https://ru.linkedin.com/in/andrey-makarov-3b7646120" title="Профиль на LinkedIn" target="_blank">
-	<i class="fa fa-linkedin"></i>
+	<i class="fa fa-linkedin-square"></i>
 	</a></li>
 
 	<li class="animation"><a href="http://anmcarrow.deviantart.com" title="Образцы работ" target="_blank">
