--- a/wishlist.html
+++ b/wishlist.html
@@ -52,6 +52,15 @@
 <p><img src="http://artscp.com/images/stories/virtuemart/product/00-Cover.jpg" alt="" title="" />
 <a href="http://artscp.com/calendar">Вот отсюда</a></p>
 
+<h2>Постер "Through the gateway" от Palehorse</h2>
+<p><img src="http://cdn.shopify.com/s/files/1/0279/2327/products/Palehorse_Print_Kali_Detail1_2048x2048.jpg" title="" />
+<a href="https://palehorse.myshopify.com/collections/prints/products/through-the-gateway-print">Вот отсюда</a></p>
+
+<h2>Постер от "Manalanextdoor"</h2>
+<p><img src="http://manalanextdoor.com/imgs/manala-poster-sml.png" title="" />
+<a href="http://manalanextdoor.com/shop/manala-poster">Вот отсюда</a></p>
+
+
 <h1>Инвентарь для НРИ</h1>
 
 <h2>Plano storage box model 737</h2>
