wishlist-to-bitbucket

--- a/links.html
+++ b/links.html
@@ -34,7 +34,7 @@
       <li class="inactive"><a href="/" title="В начало">ГЛАВНАЯ</a></li>
       <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
       <li><a href="http://anmcarrow.deviantart.com" title="Образцы работ">ГАЛЕРЕЯ</a></li>
-      <li class="inactive"><a href="/wishlist" title="Список предпочтений">WISHLIST</a></li>
+      <li class="inactive"><a href="/https://bitbucket.org/anmcarrow/wishlist" title="Список предпочтений">WISHLIST</a></li>
       <li class="active"><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
     </ul>
   </nav>
