--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<i class="fa-instagram fa-fw"></i>
 	</a></li>
 
-<li class="animation"><a href="http://twitter.com/anmcarrow" title="Новостни и общение" target="_blank">
+<li class="animation"><a href="http://twitter.com/anmcarrow" title="Новости и общение" target="_blank">
 	<i class="fa-twitter fa-fw"></i>
 	</a></li>
 
