--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
 </div>
 <h2>Интересы</h2>
 <ul class="interests">
-<li>Unix/Linux, телекоммуникации и ИТ</li>
+<li>Unix/Linux, компьютерные сети, IT</li>
 <li>Иллюстративная графика, традиционные ремёсла и DIY</li>
 <li>Настольные ролевые игры, индустрия и геймдизайн</li>
 </ul>
