--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <meta Name="author" Content="Andrey Makarov, mailbox@anmcarrow.me">
 
-<link rel="shortcut icon" href="http://anmcarrow.me/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="https://anmcarrow.me/favicon.ico" type="image/x-icon" />
 
 <meta  Name="keywords" Content="графический дизайн карты иллюстрации настольные ролевые игры нри художник иллюстратор" >
 <meta  Name="description" Content="Персональный сайт Андрея Макарова, иллюстративная графика для настольных ролевых игр, контакты, дополнительная информация" >
 
     <link rel="stylesheet" href="css/main.css" type="text/css">
         <link rel="stylesheet" href="css/menu.css" type="text/css">
-  
+
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
@@ -68,7 +68,7 @@
 
 	<li class="animation"><a href="http://anmcarrow.deviantart.com" title="Образцы работ" target="_blank">
 	<i class="fa-deviantart fa-fw"></i>
-	</a></li>	
+	</a></li>
 
 	<li class="animation"><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank">
 	<i class="fa-google-plus fa-fw"></i>
@@ -85,7 +85,7 @@
 </div>
 
 <footer>
-<div id="footer"> 
+<div id="footer">
 <!-- <div class="footer-copyrights"> -->
 <!-- <a class="linkabout" href="mailto:mailbox@anmcarrow.me" title="Пишите письма!"> -->
 <!-- © am_2016, all rights reserved -->
