Change wishlist link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li class="active"><a href="/" title="В начало">ГЛАВНАЯ</a></li>
         <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
         <li><a href="http://anmcarrow.deviantart.com" title="Образцы работ" target="_blank">ГАЛЕРЕЯ</a></li>
-        <li class="inactive"><a href="https://bitbucket.org/anmcarrow/wishlist" target="_blank" title="Список предпочтений">WISHLIST</a></li>
+        <li class="inactive"><a href="https://github.com/anmcarrow/wishlist" target="_blank" title="Список предпочтений">WISHLIST</a></li>
         <li class="inactive"><a href="/links" title="Сайд-проекты">ССЫЛКИ</a></li>
 </ul>
 </nav>
