--- a/links.html
+++ b/links.html
@@ -34,7 +34,7 @@
       <li class="inactive"><a href="/" title="В начало">ГЛАВНАЯ</a></li>
       <li class="inactive"><a href="/aboutme" title="Немного обо мне">ABOUT</a></li>
       <li><a href="http://anmcarrow.deviantart.com" title="Образцы работ">ГАЛЕРЕЯ</a></li>
-      <li class="inactive"><a href="https://bitbucket.org/anmcarrow/wishlist" target="_blank" title="Список предпочтений">WISHLIST</a></li>
+      <li class="inactive"><a href="https://github.com/anmcarrow/wishlist" target="_blank" title="Список предпочтений">WISHLIST</a></li>
       <li class="active"><a href="/links" title="Полезные ссылки">ССЫЛКИ</a></li>
     </ul>
   </nav>
@@ -75,7 +75,7 @@
 
 	<li><a href="http://anmcarrow.deviantart.com" title="Образцы работ" target="_blank">
 	DeviantArt — галереи и клипарты
-	</a></li>	
+	</a></li>
 
 	<li><a href="https://plus.google.com/+AndreyMakarov/" title="Hangouts, например" target="_blank">
 	Google+ — в основном, для Hangouts
